--- a/index.html
+++ b/index.html
@@ -12,20 +12,20 @@
 <body>
     
     <div class="bg-warning p-3">
-        <div class="container  text-center justify-content-center">
-            <h1 class="text-uppercase">Calcola il prezzo del tuo Biglietto</h1>
+        <div class="container text-center">
+            <h1 class="text-uppercase ">Calcola il prezzo del tuo Biglietto</h1>
             <form class="mt-5">
                 <div class="row">
                     <div class="col-6">
-                        <label for="km" class="fs-2">Distanza in km</label>
-                        <input type="number" id="km" name="km" class="border-warning"><br><br>
+                        <label for="km" class="fs-3">Inserisci i kilometri che vuoi percorrere</label>
+                        <input type="text" id="km" name="km" class="form-control"><br><br>
                     </div>
                     <div class="col-6 ">
-                        <label for="age" class="fs-2">Et&aacute; passeggero</label>
-                        <input type="number" id="age" name="age" class="border-warning"><br><br>
+                        <label for="age" class="fs-3">Inserisci la tua Et&aacute;</label>
+                        <input type="text" id="age" name="age" class="border-warning form-control"><br><br>
                     </div>
                 </div>
-                <input type="button" id="calcola" value="calcola prezzo" class="mt-4 btn-warning">
+                <button type="button" id="calcola" class="mt-3 btn btn-success "> calcola prezzo</button>
               </form>
               <div>
                 <h2 id="prezzo" class="mt-3"></h2>
